objects/Issue_to_Queue_Mapping__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>