objects/Issue_to_Queue_Mapping__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>