objects/Issue_to_Queue_Mapping__c/fields/Reason_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Reason_Subcategory__c</fullName>
    <label>Reason Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>