objects/Issue_to_Queue_Mapping__c/fields/Workstep_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Workstep_Attribute__c</fullName>
    <label>Workstep Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>